<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fluxxx.Calculatrice"
    tools:ignore="MergeRootFrame" >

	<LinearLayout
	    android:id="@+id/LayoutPrincipal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	>
		<LinearLayout
		    android:id="@+id/Ligne1"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		>
    		<TextView
			    android:id="@+id/affichPrincipal"
				android:text="@string/affich0"
			    android:layout_width="0dip"
			    android:layout_weight=".7"
			    android:layout_height="wrap_content"
			    android:textSize="20sp"
				android:layout_gravity="center"
				android:gravity="right"
				android:background="#FEFEFE"
			/>
		</LinearLayout>
    	<LinearLayout
		    android:id="@+id/Ligne2"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		>
	   	    <Button
		        android:id="@+id/buttonNum1"
		        android:text="@string/buttonNum1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
			    android:layout_weight=".25"
			/>
		    <Button
		        android:id="@+id/buttonNum2"
		        android:text="@string/buttonNum2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
			    android:layout_weight=".25"
			/>
		    <Button
		        android:id="@+id/buttonNum3"
		        android:text="@string/buttonNum3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
			    android:layout_weight=".25"
			/>
		    <Button
		        android:id="@+id/buttonPlus"
		        android:text="@string/buttonPlus"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
			    android:layout_weight=".25"
			/>
		    	    	    
		</LinearLayout>
    	<LinearLayout
		    android:id="@+id/Ligne3"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		>
	   	    <Button
		        android:id="@+id/buttonNum4"
		        android:text="@string/buttonNum4"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
			    android:layout_weight=".25"
			/>
		    <Button
		        android:id="@+id/buttonNum5"
		        android:text="@string/buttonNum5"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
			    android:layout_weight=".25"
			/>
		    <Button
		        android:id="@+id/buttonNum6"
		        android:text="@string/buttonNum6"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
			    android:layout_weight=".25"
			/>
		    <Button
		        android:id="@+id/buttonMin"
		        android:text="@string/buttonMin"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
			    android:layout_weight=".25"
			/>
		    	    	    
		</LinearLayout>
    	<LinearLayout
		    android:id="@+id/Ligne4"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		>
	   	    <Button
		        android:id="@+id/buttonNum7"
		        android:text="@string/buttonNum7"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
			    android:layout_weight=".25"
			/>
		    <Button
		        android:id="@+id/buttonNum8"
		        android:text="@string/buttonNum8"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
			    android:layout_weight=".25"
			/>
		    <Button
		        android:id="@+id/buttonNum9"
		        android:text="@string/buttonNum9"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
			    android:layout_weight=".25"
			/>
		    <Button
		        android:id="@+id/buttonBy"
		        android:text="@string/buttonBy"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
			    android:layout_weight=".25"
			/>
		    	    	    
		</LinearLayout>
    	<LinearLayout
		    android:id="@+id/Ligne5"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		>
	   	    <Button
		        android:id="@+id/buttonReset"
		        android:text="@string/buttonReset"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
			    android:layout_weight=".25"
			/>
		    <Button
		        android:id="@+id/buttonNum0"
		        android:text="@string/buttonNum0"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
			    android:layout_weight=".25"
			/>
		    <Button
		        android:id="@+id/buttonComma"
		        android:text="@string/buttonComma"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
			    android:layout_weight=".25"
			/>
		    <Button
		        android:id="@+id/buttonDiv"
		        android:text="@string/buttonDiv"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
			    android:layout_weight=".25"
			/>
		    	    	    
		</LinearLayout>
    	
    	<LinearLayout
		    android:id="@+id/Ligne6"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		>
	   	    <Button
		        android:id="@+id/buttonEqual"
		        android:text="@string/buttonEqual"
		        android:layout_width="0dip"
		        android:layout_height="wrap_content"
			    android:layout_weight=".75"
			/>
		    	    	    
		</LinearLayout>
    	
    	<LinearLayout
		    android:id="@+id/Ligne7"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		>
    		<TextView
			    android:id="@+id/affichNom"
			    android:layout_width="0dip"
			    android:layout_weight=".7"
			    android:layout_height="wrap_content"
			    android:textSize="20sp"
				android:layout_gravity="center"
				android:gravity="center"
				android:background="#FEFEFE"
			/>
		    	    	    
		</LinearLayout>
    	
    </LinearLayout>
				
</FrameLayout>
	